Ecommerce Components and Page Examples done

--- a/src/1 copy 12.html
+++ b/src/1 copy 12.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    <!-- Banner sections start -->
+    <!-- Promo start -->
 
 
 
@@ -17,7 +17,7 @@
     <!-- Archived item start -->
     <!-- Archived item end -->
 
-    <!-- 404 Pages end -->
+    <!-- Promo end -->
 
 
 </body>
