--- a/src/index.html
+++ b/src/index.html
@@ -589,7 +589,7 @@
                       <img src="./assets/images/alerts.png" alt="" class="absolute inset-0 h-full w-full" />
                     </div>
                     <h4 class="mt-4 text-sm font-medium text-slate-900 group-hover:text-indigo-600">
-                      <a href="alert.html"><span class="absolute -inset-2.5 z-10"></span><span class="relative">Alerts</span></a>
+                      <a href="alerts.html"><span class="absolute -inset-2.5 z-10"></span><span class="relative">Alerts</span></a>
                     </h4>
                     <p class="relative mt-1.5 text-xs font-medium text-slate-500">6 components</p>
                   </div>
