folder structure upadated

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind CSS Components</title>
-    <link href="./output.css" rel="stylesheet" />
+    <link href="./assets/css/output.css" rel="stylesheet" />
   </head>
   <body class="font-sans antialiased text-gray-600">
     <header class="sticky top-0 overflow-x-auto whitespace-nowrap border-b transition duration-100 z-40 border-slate-900/5 bg-white">
