--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
                       <img src="./assets/images/stats-sections.png" alt="" class="absolute inset-0 h-full w-full" />
                     </div>
                     <h4 class="mt-4 text-sm font-medium text-slate-900 group-hover:text-indigo-600">
-                      <a href="stats.html"><span class="absolute -inset-2.5 z-10"></span><span class="relative">Stats</span></a>
+                      <a href="stats-sec.html"><span class="absolute -inset-2.5 z-10"></span><span class="relative">Stats</span></a>
                     </h4>
                     <p class="relative mt-1.5 text-xs font-medium text-slate-500">10 components</p>
                   </div>
